added html to requirements

--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ dj-database-url==0.4.0
 Django==1.9.2
 django-extensions==1.6.1
 gunicorn==19.4.5
+html==1.16
 http==0.2
 psycopg2==2.6.1
 requests==2.9.1
