--- a/requirements.txt
+++ b/requirements.txt
@@ -2,13 +2,13 @@ beautifulsoup4==4.4.1
 dj-database-url==0.4.0
 Django==1.9.2
 django-extensions==1.6.1
-django-webpack-loader==0.2.4
 gunicorn==19.4.5
 html==1.16
 http==0.2
+Jinja2==2.8
+MarkupSafe==0.23
 optional-django==0.3.0
 psycopg2==2.6.1
-react==2.0.2
 requests==2.9.1
 six==1.10.0
 Werkzeug==0.11.3
