--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ beautifulsoup4==4.4.1
 dj-database-url==0.4.0
 Django==1.9.2
 django-extensions==1.6.1
+django-webpack-loader==0.2.4
 djangorestframework==3.3.2
 gunicorn==19.4.5
 html==1.16
