--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "View tracking with Django",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+      "build":"webpack --config webpack.config.js --progress --colors" 
   },
   "keywords": [
     "django",
@@ -16,6 +16,10 @@
   ],
   "author": "Jonathan Cox",
   "license": "ISC",
+  "engines": {
+    "node": "0.12.7",
+    "npm": "2.11.3"
+  }
   "devDependencies": {
     "babel": "^6.3.26",
     "babel-core": "^6.4.5",
