--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "node": "0.12.7",
     "npm": "2.11.3"
   },
-  "devDependencies": {
+  "dependencies": {
     "babel": "^6.3.26",
     "babel-core": "^6.4.5",
     "babel-loader": "^6.2.1",
