--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "expose-loader": "^0.7.1",
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.8.5",
-    "juery": "^2.2.0",
+    "jquery": "^2.2.0",
     "jquery-loader": "^2.1.1",
     "react": "^0.14.7",
     "react-dom": "^0.14.7",
