--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "View tracking with Django",
   "main": "index.js",
   "scripts": {
-      "build":"webpack --config webpack.config.js --progress --colors" 
+      "build":"webpack --config webpack.config.js --progress  --display-modules  --colors" 
   },
   "keywords": [
     "django",
